<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">

        <item
            android:id="@+id/nav_income"
            android:icon="@drawable/revenue128"
            android:title="@string/income" />

    </group>

    <group android:checkableBehavior="none">

        <item
            android:id="@+id/nav_bills"
            android:icon="@drawable/receipt128"
            android:title="@string/bills"/>

    </group>

    <group android:checkableBehavior="none">

        <item
            android:id="@+id/nav_expenses"
            android:icon="@drawable/expense128"
            android:title="@string/expenses"/>

    </group>

</menu>