<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:background="#F3F3F3"
    >

    <TextView
        android:id="@+id/tvBillType"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/strtest"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@id/ivBillsCircle"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        />

    <TextView
        android:id="@+id/tvDueDate"
        android:text="@string/_12_12_12"
        android:layout_marginStart="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvBillType"
        android:layout_toEndOf="@id/ivBillsCircle"
        android:layout_marginTop="5dp"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/tvBillAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strtest"
        android:textStyle="bold"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_centerInParent="true"
        android:textColor="#000000"
        android:gravity="start"
        />


    <TextView
        android:id="@+id/tvBillsKune"
        android:layout_width="50dp"
        android:gravity="end"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/tvBillAmount"
        android:layout_centerInParent="true"
        android:layout_marginEnd="10dp"
        android:textColor="#000000"/>

    <ImageView
        android:id="@+id/ivBillsCircle"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/bill_content_desc"
        />

</RelativeLayout>